Started cleaning up a ton of the styling issues that keep cropping up around Atheos. Mainly just fine tuning the look and feel and hopefully coming to fix the awful dialog boxes
Former-commit-id: f837743912516da267aca0e4ef321aae4d088a5a

--- a/themes/atheos/main.scss
+++ b/themes/atheos/main.scss
@@ -1,12 +1,13 @@
 /* SCSS IMPORT FILES */
 @import "modules/util/reset";
-@import "modules/util/mixins", "modules/util/colours", "modules/util/shades", "modules/util/variables";
+@import "modules/util/mixins", "modules/util/colors", "modules/util/shades", "modules/util/variables";
 @import "modules/util/animations";
 
 @import "modules/util/scrollbars";
 
 
-@import "modules/common/checkbox", "modules/common/optionsmenu", "modules/common/text", "modules/common/button";
+@import "modules/common/checkbox", "modules/common/optionsmenu", "modules/common/input", "modules/common/button";
+@import "modules/common/label";
 @import "modules/common/tables";
 @import "modules/common/typography";
 
@@ -26,8 +27,8 @@
 @import "modules/graphics/icons", "modules/graphics/loader", "modules/graphics/logo";
 
 @import "modules/misc/contextmenu", "modules/misc/scout", "modules/misc/uploader";
-
 @import "modules/misc/login", "modules/misc/synthetic", "modules/misc/installer";
+@import "modules/misc/update";
 
 @import "modules/settings", "modules/user";
  
@@ -39,7 +40,7 @@ html {
 	width: 100%;
 	height: 100%;
 	color: #fff;
-	font: normal $font-size 'Ubuntu', sans-serif;
+	font: normal $fontSizePr 'Ubuntu', sans-serif;
 	overflow: hidden;
 }
 
