--- a/themes/atheos/modules/editor/_bottom_bar.scss
+++ b/themes/atheos/modules/editor/_bottom_bar.scss
@@ -4,7 +4,7 @@
 	height: $bottomBarHeight;
 	padding: 3px 0;
 	background: $foreground;
-	color: $font-color-subtle;
+	color: $fontColorMinor;
 
 	&>a,
 	&>span {
